--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ readme = "README.md"
 packages = [{include = "upscaler"}]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = ">=3.10,<3.14"
 typer = "^0.12.0"
 rich = "^13.0.0"
 ffmpeg-python = "^0.2.0"
 click = ">=8.1.7,<8.2.0"
+torch = "^2.7.0"
+torchvision = "^0.18.0"
+basicsr = "^1.4.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
