--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,12 @@ typer = "^0.12.0"
 rich = "^13.0.0"
 ffmpeg-python = "^0.2.0"
 click = ">=8.1.7,<8.2.0"
-basicsr = "^1.4.2"
 Pillow = "^10.0.0"
+basicsr = { version = "^1.4.2", optional = true }
+
+[tool.poetry.extras]
+# Optional Torch backend dependencies (pulls torch/torchvision via basicsr)
+torch = ["basicsr"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
