--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,15 @@ rich = "^13.0.0"
 ffmpeg-python = "^0.2.0"
 click = ">=8.1.7,<8.2.0"
 Pillow = "^10.0.0"
+# basicsr is optional and may not build on Python 3.13
+# For Python 3.13: Skip torch extras, use Vulkan backend (default) which doesn't need basicsr
+# For Python 3.10-3.12: Can install torch extras if needed
 basicsr = { version = "^1.4.2", optional = true }
 
 [tool.poetry.extras]
-# Optional Torch backend dependencies (pulls torch/torchvision via basicsr)
+# Note: Torch backend requires basicsr + manual PyTorch installation.
+# - Python 3.13: basicsr may fail to build. Use Vulkan backend instead (default, no torch needed).
+# - Python 3.10-3.12: Install basicsr, then: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
 torch = ["basicsr"]
 
 [tool.poetry.group.dev.dependencies]
